Fix pagination on mobile, change height of cards ro 175px instead 100%

--- a/src/styles/ui-components.scss
+++ b/src/styles/ui-components.scss
@@ -104,7 +104,7 @@ img.miq-gradient-background {
 .miq-tile-with-body .card-view-pf {
   .card {
     width: 375px;
-    height: 100%;
+    height: 175px;
 
     .card-content {
       overflow: hidden;
@@ -195,16 +195,6 @@ img.miq-gradient-background {
 .miq-sand-paper, .miq-sand-paper > div {
   background: #f5f5f5;
   overflow: hidden;
-}
-
-.miq-tile-view {
-  height: 100vh;
-
-  .card-view-pf {
-    height: 72%;
-    overflow-y: auto;
-    margin-right: -20px;
-  }
 }
 
 /* begin toolbar styling (to be moved to the ui-components repo) */
